Fix Width in home section (collapse)

--- a/progress-projek/src/components/css/Dashboard.css
+++ b/progress-projek/src/components/css/Dashboard.css
@@ -306,74 +306,49 @@
 /* Section */
 .home-section {
   position: relative;
-  background: #f8f9ff;
+  background: #F8F9FF;
   min-height: 100vh;
-  left: 232px;
-  width: calc(100% - 232px);
+  margin-left: 232px;
+  padding: 105px 12px 65px;
   transition: all 0.5s ease;
-}
-.home-navbar{
-  width: 100%;
-    height: 70px;
-    position: fixed;
-    z-index: 999;
-}
-.home-navbar .navbar{
-  position: relative;
-  width: calc(100% - 232px);
-  height: 70px;
-  transition: linear 0.6s;
-}
-.home-section .content{
-  padding-top: 75px;
-}
-.sidebar.close ~ .home-section .home-navbar .navbar{
-  position: relative;
-  width: calc(100% - 78px);
-  transition: linear 0.6s;
-}
-.home-section nav .container-fluid {
-  margin-left: 40px !important;
-  margin-right: 40px !important;
-}
-.home-section .content .container-fluid {
-  margin-left: 40px !important;
-  margin-right: 40px !important;
+  z-index: 1 !important;
 }
 .sidebar.close ~ .home-section {
-  left: 78px;
-  width: calc(100% - 78px);
+  margin-left: 78px  !important;
+  transition: all 0.5s ease;
 }
-.sidebar ~ .home-section .content .container-fluid {
-  width: calc(100% - 78px);
+.sidebar.close ~ .home-section .navbar-custom {
+  left: 78px !important;
+  transition: all 0.5s ease;
 }
-.sidebar.close ~ .home-section .home-navbar .menu {
-  left: 10px !important;
+.sidebar.close > .menu{
+  left: 84px;
+  transition: all 0.5s ease;
+}
+.sidebar.close ~ .home-section .home-navbar .search-box{
+  margin-left: 20px !important;
   transition: all 0.5s ease;
 }
 .menu {
   transition: all 0.5s ease;
   display: flex;
-  position: absolute;
-  z-index: 200;
+  position: fixed;
   top: 16px;
-  left: -20px;
+  left: 214px;
   justify-content: center;
   align-items: center;
   width: 35px;
   height: 35px;
   background-color: white;
   border-radius: 25px;
+  color: #5563ef;
+  font-size: 18px;
   box-shadow: 0 2px 12px rgb(0 0 0 / 11%);
+  cursor: pointer;
 }
 .home-section .home-navbar .menu {
   color: #2313da;
   font-size: 22px;
-}
-
-.home-section .home-navbar .bx-menu {
-  margin: 0 15px;
-  cursor: pointer;
 }
 .home-section .home-navbar .text {
   font-size: 26px;
@@ -386,17 +361,27 @@
 }
 
 /* custom navbar */
+.navbar-custom {
+  padding: 0 24px !important;
+  min-height: 70px !important;
+  position: fixed !important;	
+  left: 232px !important;
+  top: 0 !important;
+  right: 0 !important;
+  transition: all 0.5s ease;
+  z-index: 2 !important;
+}
 .seperatorVertikal {
-  border-left: 2px solid #b3bac5;
+  border-left: 2px solid #B3BAC5;
   height: 29px;
 }
-#clockDisplay {
+#clockDisplay{
   font-family: NunitoSans-Regular;
   font-size: 14px;
   line-height: 19px;
-  color: #1f2050;
+  color: #1F2050;
 }
-.shadowNavbar {
+.shadowNavbar{
   box-shadow: 0px 4px 22px rgba(69, 69, 69, 0.08) !important;
 }
 .list-unstyled {
